--- a/index.html
+++ b/index.html
@@ -4,18 +4,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Steel Price Hub</title>
+    <title>IndusCom Index</title>
     <meta name="description" content="B2B marketplace for steel industry with real-time price tracking" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="Steel Price Hub - B2B Marketplace" />
+    <meta property="og:title" content="IndusCom Index - B2B Marketplace" />
     <meta property="og:description" content="Real-time steel price tracking & B2B marketplace for the steel industry" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
   </head>
 
   <body>
